<resources>
    <string name="wifi_action_get">点击 获取WiFi钥匙</string>
    <string name="wifi_action_cancel">取消</string>
    <string name="wifi_switch_text">"打开WiFi
寻找身边免费WiFi"</string>
    <string name="wifi_switch_action">打开WiFi</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新列表</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="wifi_action_open">开启WiFi</string>
    <string name="wifi_action_login">登  录</string>
    <string name="wifi_action_disconnect">断开连接</string>
    <string name="wifi_action_nearby">周边热点</string>
    <string name="wifi_action_prompt">请开启WiFi(右上角开关)</string>
    <string name="wifi_action_share">告诉小伙伴</string>
    <string name="wifi_action_pass">近传WiFi</string>
    <string name="wifi_action_testspeed">测网速</string>
    <string name="wifi_action_speed">时速</string>
    <string name="nearby_action_back">返回</string>
    <string name="nearby_noaps_prompt">当前周边没有热点信息</string>
    <string name="nearby_edit_prompt">继续完善WiFi信息，方便他人快速发现连网</string>
    <string name="wifi_sate_checking">已连接，检查中...</string>
    <string name="wifi_sate_timeout">连接超时</string>
    <string name="wifi_rssi_timeout">信号较弱，连接失败</string>
    <string name="wifi_sate_connecting">努力连接中...</string>
    <string name="wifi_sate_authenticating">验证中...</string>
    <string name="wifi_sate_obtaining_ipaddr">获取IP地址中...</string>
    <string name="wifi_sate_connected">已连接，网络通畅</string>
    <string name="wifi_sate_connected0">已连接，网络通畅</string>
    <string name="wifi_sate_disconnecting">断开中...</string>
    <string name="wifi_sate_disconnected">尝试连接中...</string>
    <string name="wifi_sate_failed">连接失败</string>
    <string name="wifi_sate_idle">努力连接中...</string>
    <string name="wifi_desc_needlogin">已连接，登录后可上网</string>
    <string name="wifi_desc_work_timeout">已连接，网络较差</string>
    <string name="wifi_desc_work_unused">无法上网</string>
    <string name="wifi_desc_temp_nowork">暂时无法上网</string>
    <string name="wifi_desc_nopwd">无密码</string>
    <string name="wifi_desc_saveed">已保存密码</string>
    <string name="wifi_desc_crack">点击，免密码连接</string>
    <string name="wifi_map_search">正在更新附近WiFi，请稍等...</string>
    <string name="wifi_map_above100">共找到100+个热点</string>
    <string name="wifi_map_blow100">共找到 %1$d个热点</string>
    <string name="wifi_pwd_hint">请输入密码</string>
    <string name="wifi_pwd_wrong">(密码错误)</string>
    <string name="wifi_notify_title">快牙免费WiFi已为你连上</string>
    <string name="wifi_connect_fail">连接失败，可再次尝试</string>
    <string name="wifi_connect_disconnected">连接断开</string>
    <string name="wifi_connect_succ">成功连接</string>
    <string name="wifi_confirm_fail">验证失败</string>
    <string name="wifi_carker_zero">未获取到WiFi钥匙</string>
    <string name="wifi_carker_zero_try">未获取到WiFi钥匙，可再尝试一次</string>
    <string name="wifi_carker_buesy">系统繁忙，请稍后再试</string>
    <string name="wifi_wifilist_zero">无需要密码的WiFi</string>
    <string name="wifi_free_empty">暂无免费WiFi，点击刷新</string>
    <string name="wifi_free_empty2">暂无免费WiFi，点击刷新</string>
    <string name="wifi_carker_over">获取WiFi钥匙完成</string>
    <string name="wifi_info_updatesuccess">提交成功</string>
    <string name="wifi_connect_ssid">WiFi名称不能为空</string>
    <string name="wifi_connect_needpwd">密码不能为空</string>
    <string name="wifi_security_no">无</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA/WPA2 PSK</string>
    <string name="wifi_dialog_action_connect">连接</string>
    <string name="wifi_dialog_action_confirm">确定</string>
    <string name="wifi_dialog_action_cancel">取消</string>
    <string name="wifi_dialog_action_forget">取消保存</string>
    <string name="wifi_share_success_msg">分享成功，活雷锋o(∩_∩)o</string>
    <string name="wifi_share_fail_msg">分享失败，再试一次，别气馁</string>
    <string name="wifi_share_notnet_msg">当前没有WiFi连接</string>
    <string name="wifi_share_dialog_title">分享热点</string>
    <string name="wifi_share_loading_txt">分享中…</string>
    <string name="wifi_share_dialog_loading">分享中，请稍等...</string>
    <string name="wifi_share_dialog_content_normal">把WiFi分享给周边的小伙伴，分享多，享用多！</string>
    <string name="wifi_share_dialog_content_free">转告小伙伴，这里是可以免费上网的</string>
    <string name="wifi_share_dialog_apssid">WiFi名称：</string>
    <string name="wifi_share_dialog_appwd">WiFi密码：</string>
    <string name="wifi_dialog_signal_text">信号强度：</string>
    <string name="wifi_dialog_action_share">分享</string>
    <string name="wifi_dialog_safe_text">安全级别：</string>
    <string name="wifi_edit_title">的详细信息</string>
    <string name="wifi_edit_loading">信息提交中，请稍等...</string>
    <string name="wifi_edit_loaction_timeout">自动获取位置信息超时，可手动输入需要填写的内容</string>
    <string name="wifi_edit_placeempty">暂无选项，请手动输入</string>
    <string name="wifi_edit_submit">完成</string>
    <string name="wifi_edit_ok">确定</string>
    <string name="wifi_edit_type">场所类型：</string>
    <string name="wifi_edit_place">所  在  地：</string>
    <string name="wifi_edit_loaction">具体地址：</string>
    <string name="wifi_edit_ltype">选择场所</string>
    <string name="wifi_edit_lplace">选择所在地</string>
    <string name="wifi_edit_nochose">请选择其中一项</string>
    <string name="wifi_protal_confirm_title">验证</string>
    <string name="wifi_apedit_action_ok">完成</string>
    <string name="wifi_apedit_title">WiFi信息完善</string>
    <string name="wifi_apedit_address_empty">具体地址不能为空</string>
    <string name="wifi_ap_describe_hint1">自动获取中...</string>
    <string name="wifi_detail_text">WiFi详情</string>
    <string name="wifi_dialog_action_disconnect">断开连接</string>
    <string name="wifi_detail_item_ssid">WiFi名称:</string>
    <string name="wifi_detail_item_state">状态信息:</string>
    <string name="wifi_detail_item_signal">信号强度:</string>
    <string name="wifi_detail_item_speedmax">最大连接速度:</string>
    <string name="wifi_detail_item_encryptype">加密类型:</string>
    <string name="wifi_detail_item_ip">IP地址:</string>
    <string name="wifi_dialog_action_updateinfo">完善信息</string>
    <string name="wifi_type_free">免费WiFi</string>
    <string name="wifi_type_key">需要密码</string>
    <string name="wifi_down_tips">随时随地，想上就上</string>
    <string name="wifi_menu_open">打开  免费WiFi</string>
    <string name="wifi_menu_download">下载  免费WiFi</string>
    <string name="wifi_menu_install">安装  免费WiFi</string>
    <string name="wifi_installdialog_content_speed">"使用测网速
需安装完整版快牙免费WiFi"</string>
    <string name="wifi_installdialog_content_pass">"使用WiFi传递功能
需安装完整版快牙免费WiFi"</string>
    <string name="error_msg_servererror">系统繁忙，请稍后再试</string>
    <string name="error_msg_noconnectionerror">系统繁忙，请稍后再试</string>
    <string name="error_msg_noconnectionerror2">网络不佳，请查看网络设置</string>
    <string name="error_msg_timeouterror">获取钥匙超时，请重试</string>
    <string name="error_msg_timeouterror2">更新超时，请重试</string>
    <string name="error_msg_timeouterror3">获取超时</string>
    <string name="error_msg_authfailureerror">系统繁忙，请稍后再试</string>
    <string name="error_msg_networkerror">网络错误</string>
    <string name="error_msg_parseerror">内容解析有误</string>
    <string name="crack_pwd_fail_server">获取钥匙失败，请重试</string>
    <string name="crack_pwd_fail_timeout">获取钥匙超时，请重试</string>
    <string name="wifi_dialog_prompt_title">提示</string>
    <string name="wifi_dialog_nonetwork_prompt">当前无网络，获取WiFi钥匙需要借助些许移动流量支持</string>
    <string name="wifi_dialog_nonetwork_prompt2">当前连接WiFi无法上网，请登录验证或者长按断开连接</string>
    <string name="wifi_dialog_action_opendata">开启数据</string>
    <string name="wifi_dialog_unconnected_text">你未曾连过该WiFi，请输入密码连接</string>
    <string name="wifi_dialog_apedit_type">热点类型</string>
    <string name="wifi_dialog_apedit_owner">热点归属</string>
    <string name="wifi_nearby_fail_server">更新失败，请重试</string>
    <string name="wifi_nearby_fail_timeout">更新超时，请重试</string>
    <string name="wiedit_updtae_fail">提交失败</string>
    <string name="wifi_forbided_prompt">"你正处于快牙连接中
无法使用免费WiFi功能"</string>
    <string name="wifi_carker_zero_try_empty">附近没有发现WiFi钥匙，换个地方再获取看看吧</string>
    <string name="wifi_refresh_try_has_keys">点击获取WiFi钥匙或换个地方再试</string>
    <string name="wifi_refresh_try_no_keys">附近没有发现WiFi钥匙，换个地方试试吧</string>
    <string name="wifi_connect_weak_signal_prompt">这个WiFi的信号较弱，可能连不上，确定继续连接吗？</string>
    <string name="wifi_crack_wrong_pwd_prompt">主人修改了密码，无法连接了~如果知道密码，请输入密码连接</string>
    <string name="wifi_dialog_pwd_input">输入密码</string>
    <string name="wifi_dialog_pwd_cancle">取消</string>
    <string name="wifi_dialog_pwd_connect">连接</string>
    <string name="app_name">飞牙</string>
    <string name="dm_start_associated_app">关联程序</string>
    <string name="start_2x_running">请点击确定，关闭正在运行的%1$s，再打开快牙</string>
    <string name="start_2x_running_title">提示</string>
    <string name="common_ok">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_notice">提示</string>
    <string name="common_accept">接受</string>
    <string name="common_reject">拒绝</string>
    <string name="dm_cover_traffic_stat">已帮你节省%1$s</string>
    <string name="dm_cover_version">版本：3.1</string>
    <string name="dm_shake_warning">按住文件甩手机</string>
    <string name="dm_msg_drop_failed">请将图标拖放到头像上进行分享</string>
    <string name="main_connect">连朋友 传文件</string>
    <string name="menu_preview">预览</string>
    <string name="menu_play_online">试听</string>
    <string name="menu_open">打开</string>
    <string name="menu_play">播放</string>
    <string name="menu_install">安装</string>
    <string name="menu_view">查看</string>
    <string name="menu_send">传输</string>
    <string name="menu_property">属性</string>
    <string name="menu_hide">隐藏</string>
    <string name="menu_show_hide">取消隐藏</string>
    <string name="menu_backup">备份</string>
    <string name="menu_more_op">更多</string>
    <string name="menu_delete">删除</string>
    <string name="menu_rename">重命名</string>
    <string name="menu_to_game">移动到游戏</string>
    <string name="menu_to_app">移动到应用</string>
    <string name="menu_uninstall">卸载</string>
    <string name="menu_pause">暂停</string>
    <string name="menu_resume">继续</string>
    <string name="menu_retry">重试</string>
    <string name="menu_cancel">取消</string>
    <string name="menu_update">升级</string>
    <string name="menu_3g">3G下载</string>
    <string name="menu_guide">快速指南</string>
    <string name="menu_selfseed">创建种子</string>
    <string name="menu_bluetooth">蓝牙传输</string>
    <string name="faq_file">file:///android_asset/faq/faq-zh.html</string>
    <string name="item_long_click_delete_log">删除</string>
    <string name="dm_zapya_app_name">安装包</string>
    <string name="dm_zapya_backup_name">备份</string>
    <string name="dm_zapya_misc_name">其他</string>
    <string name="dm_zapya_music_name">音乐</string>
    <string name="dm_zapya_photo_name">照片</string>
    <string name="dm_zapya_video_name">视频</string>
    <string name="dm_zapya_folder_name">文件夹</string>
    <string name="dm_zapya_parent_folder">上一级</string>
    <string name="dm_paitpad_doodle_name">纸团</string>
    <string name="dm_no_file_prompt_app">暂时没有找到相关应用</string>
    <string name="dm_no_file_prompt_gallery">暂时没有找到相关图片</string>
    <string name="dm_no_file_prompt_audio">暂时没有找到相关音乐</string>
    <string name="dm_no_file_prompt_folder">暂时没有找到相关文件</string>
    <string name="dm_no_file_prompt_video">还没有离线视频请到万能影视中挑选视频</string>
    <string name="dm_tab_title_hot">快拿</string>
    <string name="dm_tab_title_game">游戏</string>
    <string name="dm_tab_title_apps">应用</string>
    <string name="dm_tab_title_camera">相机</string>
    <string name="dm_tab_title_photos">图库</string>
    <string name="dm_tab_title_movies">视频</string>
    <string name="dm_tab_title_music">音乐</string>
    <string name="dm_tab_title_folder">文件</string>
    <string name="file_apk">安装包</string>
    <string name="picture">图片</string>
    <string name="file">文件</string>
    <string name="vedio">视频</string>
    <string name="music">音乐</string>
</resources>